// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update project 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li></li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--WithoutFlushLoader-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`update project 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <!--if-->
    <!--if-->
    <li>Edit</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-create-form\\">
    <form>
      <div class=\\"group\\">
        <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Name</label>
      </div>
      <div class=\\"group\\">
        <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
        <label>Current Work Directory</label>
      </div>
      <div class=\\"group\\">
        <button type=\\"submit\\"><span>Update</span></button>
      </div>
    </form>
  </div>
  <!--ProjectForm-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`update project 3`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--if-->
    <li>Test</li>
  </ul>
  <!--BreadCrumb-->
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\"> Edit </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a class=\\"project-delete-link\\" href=\\"projects/1/delete\\"> Delete </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">Test chain</button>
    <!--if-->
    <!--Chain-->
    <!--for-->
    <a class=\\"project-chain project-chain-create\\" href=\\"projects/1/chains/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--Info-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
